--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,13 @@
   </head>
 
   <body>
-    <%= yield %>
+    <% if !flash.empty? %>
+      <% flash.each do |key, value| %>
+        <%= content_tag :div, value, class: "flash text-#{key}" %>
+      <% end %>
+    <% end %>
+    <div class= "container">
+      <%= yield %>
+    </div>
   </body>
 </html>
