--- a/app/views/images/new.html.erb
+++ b/app/views/images/new.html.erb
@@ -2,21 +2,17 @@
   <%= link_to("Back",root_path, class: "btn btn-primary") %>
 </div>
 <h3> New Image Upload </h3>
-<%= form_for @image, url: images_path(@image), html: { multipart: true } do |f| %>
-  <div id="error_explain">
-    <h2><%=pluralize(@image.errors.count, "error") %> prohibited this image from being posted:</h2>
-    <ul>
-    <% @image.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-    <% end %>
-  </ul>
+
+<%= form_for @image, html: {multipart: true}  do |f| %>
+  <%= render(partial: "error_refer/error", locals: { target: @image }) %>
+  
+  <div class="form-group">
+    <%= f.label :picture, "Upload Image" %><br/>
+    <%= f.file_field :picture  %>
   </div>
-  <div class = "form-group">
-    <%= f.label :picture,"Upload" %><br>
-    <%= f.file_field :picture, required: true %><br>
-  </div>
-  <div class = "form-group">
-    <%= f.submit %><br>
+
+  <div class="form-group">
+    <%= f.submit  %>
   </div>
 <% end %>
 
