--- a/app/views/teachers/edit.html.erb
+++ b/app/views/teachers/edit.html.erb
@@ -1,19 +1,5 @@
 <%= link_to("<< Back to index list", {:action => "index"}, :class => "back_to_link") %>
 <div class = "teachers ">
   <h2>Update teachers</h2>
-  <%= form_with model: @teacher do |f| %>
-    <table summary="Teacher form fields">
-    <tr>
-      <th>Name</th>
-      <td><%= f.text_field :name, required: true  %></td>
-    </tr>
-    <tr>
-      <th>Email</th>
-      <td><%= f.text_field :email, required: true  %></td>
-    </tr>
-    </table>
-    <div class="form-buttons">
-      <%= f.submit("Submit") %>
-    </div>
-  <% end %>
+    <%= render(partial: "form") %>
 </div>
